# Lycium

./: .gitignore  ARCHITECTURE.md  SRS.md  VISION.md  package.json  pnpm-lock.yaml  readme.md  tsconfig.base.json  tsconfig.json  turbo.json
apps/lyceum-web/: package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/lyceum-web/src/: App.css  App.tsx
apps/lyceum-web/src/components/Code/: CodeBlock.css
apps/lyceum-web/src/components/ContentView/: ContentView.tsx  contentView.css
apps/lyceum-web/src/components/GameComponent/: GameComponent.tsx
apps/lyceum-web/src/components/Quiz/: QuizBlock.tsx  quiz.css
apps/lyceum-web/src/components/Sidebar/: Sidebar.css  Sidebar.tsx
apps/lyceum-web/src/components/TopBar/: TopBar.tsx  topBar.css
apps/lyceum-web/src/components/Video/: VideoBlock.css  VideoBlock.tsx
apps/lyceum-web/src/courseData/: introToAiCourse.json  introToPythonCourse.json  webDevCourse.json
services/protheus-api/: pyproject.toml
services/protheus-api/app/: __init__.py  analytics.py  config.py  coverage.py  db.py  generation.py  ingestion.py  jobs.py  main.py  models.py  retrieval.py  schemas.py  scoring.py
services/protheus-api/tests/: conftest.py  test_api_end_to_end.py
services/protheus-workers/: pyproject.toml
services/protheus-workers/src/protheus_workers/: __init__.py  main.py
services/protheus-workers/tests/: test_worker.py
