[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protheus-api"
version = "0.1.0"
description = "Protheus platform API for ingestion, retrieval, and course generation."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.10,<3",
  "sqlalchemy>=2.0,<3"
]

[project.scripts]
protheus-api = "app.main:run"
