[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protheus-workers"
version = "0.1.0"
description = "Async workers for Protheus ingestion, extraction, and generation jobs."
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.28,<1",
  "playwright>=1.55,<2",
  "pydantic>=2.10,<3"
]

[project.scripts]
protheus-worker = "protheus_workers.main:main"
