[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protheus-workers"
version = "0.1.0"
description = "Async workers for Protheus ingestion, extraction, and generation jobs."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "sqlalchemy>=2.0,<3"
]

[project.scripts]
protheus-worker = "protheus_workers.main:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/protheus_workers"]
